<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_switch_power"
        android:title="@string/power_text"
        app:showAsAction="always"
        app:actionLayout="@layout/action_bar_switch"
        />

        <!--android:actionViewClass="android.widget.Switch"-->
    <item
        android:id="@+id/action_discover"
        android:icon="@drawable/ic_action_discover"
        android:title="@string/action_discover"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
