<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_tabs_default_padding">

    <TextView
        android:id="@+id/textViewTubes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tubes_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tubeEditTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/tubeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/tube_edit_text_hint"
            android:inputType="number"
            android:maxLength="12"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/textViewBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_background"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/seekBarBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="256"/>

</LinearLayout>